updated index and error html

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -10,7 +10,7 @@
     <marquee>My first workshop 11 page</marquee>
 </font>
 
-<body background="./static/images/misty-pink-sunset.jpg" link="white" alink="blue" vlink="#F8F8FF">
+<body background="./static/images/misty-pink-sunset.jpg"  style="background-repeat: no-repeat; background-size: cover;" link="white" alink="blue" vlink="#F8F8FF">
     <font>
         <img src="./static/images/Apple-logo.png" height="100px" width ="100px">
     </font>
@@ -21,5 +21,11 @@
         <a href="#">BLOG</a>
         <a href="#">ABOUT</a>
     </font>
+    <br><br><br><br>
+    <h1 align="center">
+        <font color="#F0827A" size="9">
+        Welcome to Day 11 FSF
+        </font>
+    </h1>
 </body>
 </html>
