--- a/src/main/resources/public/error.html
+++ b/src/main/resources/public/error.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Error</title>
-    <style type="text.css">
+    <style type="text/css">
         p {
             color: lightgreen;
             font-weight: 900;
@@ -21,5 +21,17 @@
 </head>
 <body>
     <a href="#"><img src="./static/images/404 not found.png"></a>
+
+    <div>
+        <p>
+            This is a webpage for an organization that used to exist.
+            This organization no longer exists as it has been bought over by a bigger company.
+            The new site is:
+            https://pleasureoflife.org
+            <br>
+            <br>
+            If you come upon this site, try clicking on the URL above...
+        </p>
+    </div>
 </body>
 </html>
